err/flask-json-resource.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_PyMongo-0.5.1.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_json_resource'...
Listing './lib/python3.5/site-packages/flask_json_resource/features'...
Compiling './lib/python3.5/site-packages/flask_json_resource/features/conftest.py'...
***   File "./lib/python3.5/site-packages/flask_json_resource/features/conftest.py", line 10
    print 'Setup LiveServer'
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/flask_json_resource/features/schemas'...
Compiling './lib/python3.5/site-packages/flask_json_resource/views.py'...
***   File "./lib/python3.5/site-packages/flask_json_resource/views.py", line 54
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flask_json_resource-0.2.18.egg-info'...
Listing './lib/python3.5/site-packages/flask_pymongo'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/json_patch'...
Compiling './lib/python3.5/site-packages/json_patch/patch.py'...
***   File "./lib/python3.5/site-packages/json_patch/patch.py", line 70
    except PointerError, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/json_patch/test.py'...
***   File "./lib/python3.5/site-packages/json_patch/test.py", line 10
    print test
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/json_patch-0.1.egg-info'...
Listing './lib/python3.5/site-packages/json_pointer'...
Compiling './lib/python3.5/site-packages/json_pointer/pointer.py'...
***   File "./lib/python3.5/site-packages/json_pointer/pointer.py", line 59
    except (KeyError, IndexError, TypeError, ValueError), e:
                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/json_pointer-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/json_resource'...
Listing './lib/python3.5/site-packages/json_resource/locale'...
Listing './lib/python3.5/site-packages/json_resource/locale/nl'...
Listing './lib/python3.5/site-packages/json_resource/locale/nl/LC_MESSAGES'...
Compiling './lib/python3.5/site-packages/json_resource/mongo.py'...
***   File "./lib/python3.5/site-packages/json_resource/mongo.py", line 122
    except pymongo.errors.DuplicateKeyError, error:
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/json_resource/queryset.py'...
***   File "./lib/python3.5/site-packages/json_resource/queryset.py", line 149
    except pymongo.errors.DuplicateKeyError, e:
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/json_resource/schemas'...
Listing './lib/python3.5/site-packages/json_resource/tests'...
Listing './lib/python3.5/site-packages/json_resource/tests/json'...
Listing './lib/python3.5/site-packages/json_resource/tests/schemas'...
Listing './lib/python3.5/site-packages/json_resource-0.2.11.egg-info'...
Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
